# mlops

./: .gitignore  README.md  pyproject.toml
config/: config.yml
src/mlops/assets/: command.py
src/mlops/command_script/: base.py  run.py
src/mlops/config/: config.py  pipeline.py  project.py
src/mlops/core/: azure_auth.py  custom_logger.py  main.py  utils.py
src/mlops/pipeline/: command.py
src/my_jobs/: ingest.py
